--- a/.gitignore
+++ b/.gitignore
@@ -86,13 +86,14 @@ Thumbs.db
 # "mu-plugins" directory
 # "plugins" directory
 # "themes" directory
-wp-content/*
-!wp-content/mu-plugins/
-!wp-content/plugins/
-!wp-content/themes/
+# wp-content/*
+# !wp-content/mu-plugins/
+# !wp-content/plugins/
+wp-content/themes/*
+!wp-content/uploads/*
 
 # add these plugins
-wp-content/plugins/*
+# wp-content/plugins/*
 #!wp-content/plugins/plugin-name
 
 # ignore specific themes
