--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@
 # ignore everything in the root except the "wp-content" directory.
 /*
 !wp-content/
-
+!Jenkinsfile
 
 # ignore all files starting with .
 .*
