--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
+#This Apache config file was created by Duplicator Installer on 2022-08-14 09:05:32.
+#The original can be found in archived file with the name .htaccess__[HASH]
 
 # BEGIN WordPress
 # The directives (lines) between "BEGIN WordPress" and "END WordPress" are
